--- a/static/style/table_hand.css
+++ b/static/style/table_hand.css
@@ -34,7 +34,7 @@
 }
 
 .table_hand.won_hand {
-    transform: none;
+    transform: translateY(4cqw);
 }
 
 #round_info.me_player_0:not(.status_7) .table_hand_outer.player_0,
